--- a/posts/mco/script_mco_nb_jp_sejour/index.qmd
+++ b/posts/mco/script_mco_nb_jp_sejour/index.qmd
@@ -31,7 +31,7 @@ sejour_extended
 
 ## Commentaires  
 
-Ligne 3 : `mco_rss$rum` est un tibble des variables de la partie fixe des RUM  
+Ligne 3 : `mco_rss$rum` est un tibble des variables de la partie fixe des RUM. Voir [Guide des scripts - Jeux de données](http://localhost:3479/guide_post.html#via-pmsisoft-standard)  
 
 Ligne 7 : on force en integer le calcul de la différence de dates qui, sinon, serait une différence en journées, peu pratique à manipuler  
 
