--- a/posts/mco/script_mco_sejours_raac/index.qmd
+++ b/posts/mco/script_mco_sejours_raac/index.qmd
@@ -27,7 +27,7 @@ sejour_raac
 
 ## Commentaires  
 
-Ligne 3 : `mco_rss$rum` est un tibble des variables de la partie fixe des RUM  
+Ligne 3 : `mco_rss$rum` est un tibble des variables de la partie fixe des RUM. Voir [Guide des scripts - Jeux de données](http://localhost:3479/guide_post.html#via-pmsisoft-standard)  
 
 Ligne 6 : l'argument `na.rm = TRUE` de la fonction `àny()` gère le cas où la variable `raac` des RUM est NA  
 
