--- a/posts/mco/script_mco_casemix_sejour_severite/index.qmd
+++ b/posts/mco/script_mco_casemix_sejour_severite/index.qmd
@@ -33,7 +33,7 @@ casemix_complexite
 
 ## Commentaires  
 
-Ligne 3 : `mco_rss$rum` est un tibble des variables de la partie fixe des RUM. Voir [Guide des scripts - Jeux de données](http://localhost:3479/guide_post.html#via-pmsisoft-standard)  
+Ligne 3 : `mco_rss$rum` est un tibble des variables de la partie fixe des RUM. Voir [Guide des scripts - Jeux de données](https://www.datapmsi.com/guide_post#via-pmsisoft-standard)  
 
 Ligne 8 : ce `dplyr::distinct()` sur des variables liées au séjour fait passer le tibble d'un tibble de RUM à un tibble de séjours  
 
