--- a/posts/mco/script_mco_extraction_string/index.qmd
+++ b/posts/mco/script_mco_extraction_string/index.qmd
@@ -31,7 +31,7 @@ sejour_niveau_3_4
 
 ### Commentaires  
 
-Ligne 3 : `mco_rss$rum` est un tibble des variables de la partie fixe des RUM. Voir [Guide des scripts - Jeux de données](http://localhost:3479/guide_post.html#via-pmsisoft-standard)  
+Ligne 3 : `mco_rss$rum` est un tibble des variables de la partie fixe des RUM. Voir [Guide des scripts - Jeux de données](https://www.datapmsi.com/guide_post#via-pmsisoft-standard)  
 
 Ligne 5 : `stringr::str_sub(ghm, start = 6, end = 6)` isole la complexite du GHM
 
