--- a/posts/mco/script_mco_reperage_accouchement/index.qmd
+++ b/posts/mco/script_mco_reperage_accouchement/index.qmd
@@ -36,7 +36,7 @@ Ligne 4 : on récupère le référentiel `ovalide_ccaminfo` via le package `refp
 
 Ligne 6 : production du vecteur des actes CCAM d'accouchement  
 
-Ligne 8 : `mco_rss$ccam` est un tibble des variables CCAM liées aux RUM. Voir [Guide des scripts - Jeux de données](http://localhost:3479/guide_post.html#via-pmsisoft-standard)  
+Ligne 8 : `mco_rss$ccam` est un tibble des variables CCAM liées aux RUM. Voir [Guide des scripts - Jeux de données](https://www.datapmsi.com/guide_post#via-pmsisoft-standard)  
 
 Ligne 11 : raccourci pour `dplyr::filter(is_accouchement == TRUE)`  
 
