post_psy_fa_DR_no_EGA

--- a/posts/mco/script_mco_ipdms_ghm/index.qmd
+++ b/posts/mco/script_mco_ipdms_ghm/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "<b>IPDMS par GHM</b>"
+title: "<b>IP-DMS par GHM</b>"
 date: "2024-06-11"
 categories: [MCO,GHM,Casemix]
 page-layout: full
