post_psy_fa_acte_DR_no_acte_EGA

--- a/posts/psy/script_psy_file_active_DR_sans EGA/index.qmd
+++ b/posts/psy/script_psy_file_active_DR_sans EGA/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "<b>File active avec DR et sans EGA</b>"
+title: "<b>File active avec acte DR et sans acte EGA</b>"
 date: "2024-10-15"
 categories: [PSY,RAA,IPP]
 page-layout: full
