--- a/index.qmd
+++ b/index.qmd
@@ -17,13 +17,11 @@ toc: false
 ---
 
 ::: {.callout-tip}
-## Formation "Fichiers PMSI en dataframe R"  
+## **NOUVEAU** cours [MCO - Manipuler les fichiers PMSI en R]  
 
-Produire des dataframe à partir des fichiers du PMSI pour analyser, en toute autonomie, le PMSI de mes établissements avec R  
+Un cours pour importer, nettoyer et exploiter vos fichiers PMSI MCO en R en toute autonomie.  
 
-**Vendredi 6 décembre 2024 de 9h à 12h30**  
-
-[Programme, méthodologie, tarif et pré-inscription](formation.qmd)  
+[Programme détaillé, livrables et tarif](formation_mco_file_pmsi.qmd)  
 :::
 
 [Etre tenu au courant de la publication des nouveaux scripts PMSI R](http://www.lespmsi.com/scripts-pmsi-r/){target="_blank"}  
